2008-03-03  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendtrash.c: (do_mount):
	Create the root monitor for trash when mounting. (#509740).

2008-03-03  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_receive):
	dynamically resize the read buffer. This allows receiving the huge
	welcome messages some ftp servers think are cool.

2008-03-03  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features),
	(ftp_connection_use), (ftp_connection_ensure_data_connection):
	implement EPSV. This should make IPv6 work.

2008-03-03  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_mount), (do_open_for_read),
	(do_read), (do_query_info), (do_query_fs_info), (do_enumerate),
	(do_delete), (do_make_directory): Fix a crasher when
	mounting fails, by not freeing the error just before using it
	(duh!) (Closes: #519752), Fix a few error paths leaking errors

2008-03-03  Luca Ferretti  <elle.uca@libero.it>

	* daemon/gvfsbackendftp.c: (do_query_info):
	Make "file don't exist" message conform to other backends;
	no, it isn't a string freeze break, the message yet exists
	elsewhere.

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_filename_construct):
	use g_build_path() to not get excess slashes in paths

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_try_cd), (process_line),
	(do_query_info), (do_move), (g_vfs_backend_ftp_class_init):
	implement move vfunc

2008-03-02  Carlos Garcia Campos  <carlosgc@gnome.org>

	* common/gmountsource.c: (ask_password_reply):
	Treat DBus output paramaters that contain "" as NULL. It fixes the
	sftp backend when a username is provided by the user.
	
2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_open_for_read), (do_start_write),
	(do_make_directory):
	push back connection if we fail starting a read/write

2008-03-02  Benjamin Otte  <otte@gnome.org>
